--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-DATABASE_URL=postgresql://postgres:RnPCjpX8bWBp6*G@db.tayluzmhcbxfhdjtoggj.supabase.co:5432/postgres
+DATABASE_URL=postgres://ky2tl33g:E9OboZhdVUfI@postgres-service-smb31.db.eu-east-1.onmiget.com:5432/eonev38d
 API_KEY= AIzaSyAW89n6wgwlLQazhFNf7-tVwAjpl66AdN0
 
 JWT_SECRET=yujffjgfhudfjhfigkh
