--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-DATABASE_URL=postgres://ky2tl33g:E9OboZhdVUfI@postgres-service-smb31.db.eu-east-1.onmiget.com:5432/eonev38d
+DATABASE_URL=postgresql://neondb_owner:npg_tYobN68zrgGD@ep-misty-boat-adr3oqq1-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 API_KEY= AIzaSyAW89n6wgwlLQazhFNf7-tVwAjpl66AdN0
 
 JWT_SECRET=yujffjgfhudfjhfigkh
